--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "rimraf ./build && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build"
+    "start3": "npm run build",
+    "start": "rimraf ./build && rollup -c && tsc"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,12 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "babylonjs": "^4.2.0"
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
+    "babylonjs": "^4.2.0",
+    "rollup": "^2.34.2",
+    "rollup-plugin-external-globals": "^0.6.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.29.0"
   }
 }
