--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "gl-matrix": "^3.3.0",
     "rollup": "^2.34.2",
     "rollup-plugin-external-globals": "^0.6.1",
     "rollup-plugin-sourcemaps": "^0.6.3",
