--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "rimraf ./build && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -27,6 +28,7 @@
     "rollup-plugin-external-globals": "^0.6.1",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.29.0"
+    "rollup-plugin-typescript2": "^0.29.0",
+    "typedoc": "^0.20.1"
   }
 }
